Добавлен компонент с заметкой (notes), добавлен display: flex к элементам списка заметок. Добавлена дата создания заметки (на начальной стадии)

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,3 +17,13 @@ code {
 .navbar-brand {
   margin-left: 20px;
 }
+
+.note {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  strong {
+    margin-right: 1rem;
+  }
+}
